--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@
   data-cfasync="false"
   src="//pl28233401.effectivegatecpm.com/e6b9ffe298c99ecf81bcc0d387f76798/invoke.js"
 ></script>
-<div id="container-e6b9ffe298c99ecf81bcc0d387f76798"></div>
+<div id="container-e6b9ffe298c99ecf81bcc0d387f76798" style="
+  position: fixed;
+  bottom: 16px;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  z-index: 9999;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+  max-width: 90%;
+  "></div>
 </body>
 </html>
