--- a/index.html
+++ b/index.html
@@ -201,18 +201,9 @@
     cookiePopup.style.display = "none";
   }
 </script>
-<script type="text/javascript">
-  atOptions = {
-  	'key' : 'f1552de34c6882c60419c48536abe6b9',
-  	'format' : 'iframe',
-  	'height' : 90,
-  	'width' : 728,
-  	'params' : {}
-  };
-</script>
-<script
+  <script
   type="text/javascript"
-  src="//www.highperformanceformat.com/f1552de34c6882c60419c48536abe6b9/invoke.js"
+  src="//actingproductive.com/33/1e/53/331e53b0bb909065e432b676b236aef6.js"
 ></script>
 <br>
   <script
