--- a/index.html
+++ b/index.html
@@ -205,21 +205,9 @@
   type="text/javascript"
   src="//actingproductive.com/33/1e/53/331e53b0bb909065e432b676b236aef6.js"
 ></script>
-<br>
   <script
-  async="async"
-  data-cfasync="false"
-  src="//pl28233401.effectivegatecpm.com/e6b9ffe298c99ecf81bcc0d387f76798/invoke.js"
+  type="text/javascript"
+  src="//actingproductive.com/ee/a7/db/eea7db4c6b7be4927a50a3b00cb39f11.js"
 ></script>
-<div id="container-e6b9ffe298c99ecf81bcc0d387f76798" style="
-  position: fixed;
-  bottom: 16px;
-  display: flex;
-  gap: 12px;
-  align-items: center;
-  z-index: 9999;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-  max-width: 90%;
-  "></div>
 </body>
 </html>
