--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="brand-logo" aria-hidden="true"><ion-icon name="document-attach"></ion-icon></div>
         <div class="brand-meta">
           <div class="brand-title">PDF2Image</div>
-          <div class="brand-sub">Instant PDF â†’ PNG in your browser</div>
+          <div class="brand-sub">Instant PDF → PNG in your browser</div>
         </div>
       </div>
 
@@ -54,7 +54,7 @@
           </h1>
 
           <p class="hero-sub">
-            Select any PDF and itâ€™ll render every page as a high-quality image.
+            Select any PDF and it'll render every page as a high-quality image.
           </p>
 
           <div class="meta-row">
@@ -67,7 +67,7 @@
           <div class="converter-card">
 
             <label class="drop-zone" id="drop-zone">
-              <div class="drop-icon" aria-hidden="true">ðŸ“„</div>
+              <div class="drop-icon" aria-hidden="true">📄</div>
               <div class="drop-title">Drop your PDF here</div>
               <div class="drop-sub">
                 or tap to browse from your device
@@ -93,7 +93,7 @@
             <div class="status" aria-live="polite">
               <div>
                 <span class="status-dot"></span>
-                <span id="status-text" class="status-strong">Waiting for a PDFâ€¦</span>
+                <span id="status-text" class="status-strong">Waiting for a PDF...</span>
               </div>
               <div id="file-info">No file selected</div>
             </div>
